1.작성자: 방민권 2.작업내용: - 상품 목록 서비스 구현 - 로그아웃 구현 3.작성일: 2024-09-24